--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -11,39 +11,19 @@ on:
 name: "Build & Release"
 jobs:
   build:
-    name: Build & Release
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'zulu'
-          java-version: '17'
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-          architecture: x64
+    - name: Checkout
+      uses: actions/checkout@v3
 
-      - run: flutter build apk
-      - run: |
-          flutter build ios --no-codesign
-          cd build/ios/iphoneos
-          mkdir Payload
-          cd Payload
-          ln -s ../Runner.app
-          cd ..
-          zip -r app.ipa Payload
-      - name: Push to Releases
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: "build/app/outputs/apk/release/*,build/ios/iphoneos/app.ipa"
-          tag: v1.0.${{ github.run_number }}
-          token: ${{ secrets.TOKEN }}
+    - name: Set up Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: 'stable'
 
+    - name: Install dependencies
+      run: flutter pub get
 
-
-
-
-
-# push to master, main, develop
-# pull request on main master
+    - name: Build the app
+      run: flutter build apk
