--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -8,22 +8,28 @@ on:
       - main
       - master
       - develop
-name: "Build & Release"
+
+name: "Build APK"
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    name: Build APK
+    runs-on: macos-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          architecture: x64
 
-    - name: Set up Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: 'stable'
+      - run: flutter build apk
+      - name: Push to Releases
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "build/app/outputs/apk/release/*"
+          tag: v1.0.${{ github.run_number }}
+          token: ${{ secrets.TOKEN }}
 
-    - name: Install dependencies
-      run: flutter pub get
-
-    - name: Build the app
-      run: flutter build apk
