--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,41 +1,50 @@
-name: Flutter CI
-
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
-
+      - master
+  push:
+    branches:
+      - main
+      - master
+      - develop
+name: "Build & Release"
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    name: Build & Release
+    runs-on: macos-latest
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: '12'
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          architecture: x64
 
-    - name: Set up Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: stable
+      - run: flutter build apk --release --split-per-abi
+      - run: |
+          flutter build ios --no-codesign
+          cd build/ios/iphoneos
+          mkdir Payload
+          cd Payload
+          ln -s ../Runner.app
+          cd ..
+          zip -r app.ipa Payload
+      - name: Push to Releases
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "build/app/outputs/apk/release/*,build/ios/iphoneos/app.ipa"
+          tag: v1.0.${{ github.run_number }}
+          token: ${{ secrets.TOKEN }}
 
-    - name: Install Dependencies
-      run: flutter pub get
 
-    - name: Analyze Code
-      run: flutter analyze
 
-    - name: Run Tests
-      run: flutter test
 
-    - name: Build APK
-      run: flutter build apk --debug
 
-    - name: Upload APK Artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: app-debug.apk
-        path: build/app/outputs/flutter-apk/app-debug.apk
+
+# push to master, main, develop
+# pull request on main master
 
